try to fix the flickering issue using setTimeout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,6 @@
 
 [data-solar].solar-animated {
   animation-name: solar-fade;
-  animation-duration: 0.8s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 
